metadata/force-app/main/default/objects/CustomName_BMPtj__c/CustomName_BMPtj__c.object-meta.xml
<CustomObject>
    <description>Description_yisfC</description>
    <label>CustomLabel_iMGBe</label>
    <nameField>
        <label>CustomLabel_iMGBe</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_iMGBes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>