metadata/force-app/main/default/objects/CustomName_BMPtj__c/fields/CustomField_gAiaw__c.field-meta.xml
<CustomField>
    <fullName>CustomField_gAiaw__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldpMjvU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>